--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -86,12 +86,16 @@ a:hover {
 
 .floating-box-overlay {
   align-items: center;
-  background-color: var(--color-bg-overlay);
   display: flex;
   justify-content: center;
   height: 100vh;
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100vw;
+  /* z-index: 10; */
 }
 
 .floating-box {
