--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -70,6 +70,11 @@ h1 {
   margin-bottom: 0.25rem;
 }
 
+.page-title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 /* Anchor */
 
 a {
@@ -169,6 +174,20 @@ a:hover {
   text-align: center;
   text-transform: capitalize;
 }
+
+.admin-view .admin-view-header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 4;
+  margin-bottom: 1rem;
+}
+
+.admin-view .admin-view-header .page-title {
+  flex: 1;
+}
+
 
 /*************************************************/
 /*                 WORD SKELETON                 */
@@ -332,6 +351,11 @@ h1 .word-skeleton {
 }
 body:has(.navbar) main {
   padding: 20px;
+}
+
+.navbar ul {
+  display: flex;
+  gap: 25px;
 }
 
 /*************************************************/
