ADD: Courses front

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -30,6 +30,10 @@
   --comp-color-secondary-bg-hover: var(--yellow-14);
   --comp-color-secondary-text: var(--white);
 
+  --comp-border-radius-xs: 8px;
+  --comp-border-radius-sm: 10px;
+  --comp-border-radius-md: 20px;
+
   --font-size-xl: 2rem;
   --font-size-base: 1rem;
   --font-size-sm: 0.75rem;
@@ -39,6 +43,7 @@
   --color-background: var(--color-bg-base);
   --color-foreground: var(--color-text-base);
   --color-primary: var(--comp-color-primary-bg);
+  --color-primary-hover: var(--comp-color-primary-bg-hover);
   --color-danger: var(--color-text-danger);
   --color-muted: var(--color-text-muted);
   --font-sans: var(--font-geist-sans);
@@ -84,12 +89,12 @@ a:hover {
   color: var(--comp-color-primary-bg-hover);
 }
 
-:root {
-  --yellow-3: #faeecc;
-  --yellow-7: #ffdf86;
-  --yellow-10: #fcc737;
-  --yellow-12: #e6ab0a;
-  --yellow-14: #d49c00;
+/* Button */
+button {
+  cursor: pointer;
+}
+button:disabled {
+  cursor: default;
 }
 
 /* Webkit-based browsers */
@@ -146,7 +151,7 @@ a:hover {
 .floating-box {
   align-items: center;
   background-color: var(--color-bg-base);
-  border-radius: 20px;
+  border-radius: var(--comp-border-radius-md);
   box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -188,7 +193,6 @@ a:hover {
   flex: 1;
 }
 
-
 /*************************************************/
 /*                 WORD SKELETON                 */
 /*************************************************/
@@ -198,7 +202,7 @@ a:hover {
 }
 .word-skeleton {
   background-color: #ffffffa0;
-  border-radius: 10px;
+  border-radius: var(--comp-border-radius-sm);
   display: inline-block;
   height: var(--font-size-base);
   width: 8rem;
@@ -215,7 +219,7 @@ h1 .word-skeleton {
 
 .input-group .input-group-content {
   background-color: var(--yellow-3);
-  border-radius: 12px;
+  border-radius: var(--comp-border-radius-sm);
   padding: 4px 12px 6px 12px;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
   width: 100%;
@@ -263,7 +267,7 @@ h1 .word-skeleton {
 
 .button-base {
   align-items: center;
-  border-radius: 0.5rem;
+  border-radius: var(--comp-border-radius-sm);
   display: flex;
   font-size: var(--font-size-base);
   justify-content: center;
@@ -275,7 +279,7 @@ h1 .word-skeleton {
 }
 
 .button-small {
-  border-radius: 0.3rem;
+  border-radius: var(--comp-border-radius-xs);
   padding: 0.25rem 0.5rem;
 }
 
@@ -396,4 +400,38 @@ body:has(.navbar) main {
 .minimalistic-table tr td:last-child {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.card {
+  background-color: var(--yellow-3);
+  border: 2px solid var(--yellow-12);
+  border-radius: var(--comp-border-radius-md);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+              0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg equivalent */
+  transition: all 0.3s ease; /* smooth hover */
+  overflow: hidden;
+}
+
+.card:hover {
+  box-shadow: 0 10px 20px -3px rgba(255, 255, 255, 0.7),
+              0 4px 10px -2px rgba(255, 255, 255, 0.5);
+}
+
+.card-img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-content {
+  background-color: var(--yellow-3);
+  padding: 16px;
+}
+.card-title {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.card-description {
+  color: var(--color-muted);
+  font-size: var(--font-size-sm);
+  margin-top: 14px;
 }
